@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2025 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,6 @@
 
 package com.perl5.lang.pod.parser.psi;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 
@@ -28,8 +26,7 @@ public class PodSyntaxElements {
   public static final String FORMAT_TEX = "tex";
   public static final String FORMAT_TEXT = "text";
   public static final String FORMAT_HTML = "html";
-  public static final List<String> KNOWN_FORMATTERS = Collections.unmodifiableList(
-    Arrays.asList(FORMAT_HTML, FORMAT_MAN, FORMAT_LATEX, FORMAT_ROFF, FORMAT_TEX, FORMAT_TEXT));
+  public static final List<String> KNOWN_FORMATTERS = List.of(FORMAT_HTML, FORMAT_MAN, FORMAT_LATEX, FORMAT_ROFF, FORMAT_TEX, FORMAT_TEXT);
 
   public static final String CUT_COMMAND = "=cut";
   public static final String CUT_COMMAND_WITH_LEADING_NEWLINE = "\n" + CUT_COMMAND;
